Complete color deficiencies research

--- a/computer_science/.obsidian/app.json
+++ b/computer_science/.obsidian/app.json
@@ -4,5 +4,5 @@
   "newFileLocation": "folder",
   "newFileFolderPath": "5-zettelkasten",
   "readableLineLength": false,
-  "vimMode": false
+  "vimMode": true
 }
